# postgres-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
fixtures/: Makefile  requirements.txt
fixtures/large/: init.sql  seed.py
fixtures/medium/: init.sql  seed.py
fixtures/small/: init.sql  seed.py
specs/: 0001-pg-mcp-prd.md  0002-pg-mcp-design.md  0003-pg-mcp-impl-plan.md  institutions.md
src/pg_mcp/: config.py  logging.py  models.py  server.py
src/pg_mcp/db/: inspector.py  pool.py
src/pg_mcp/prompts/: templates.py
src/pg_mcp/schema/: cache.py  discover.py  models.py
src/pg_mcp/sql/: executor.py  generator.py  pipeline.py  validator.py
tests/: conftest.py  test_generator.py  test_inspector.py  test_server.py  test_validator.py
