[project]
name = "pg-mcp"
version = "0.1.0"
description = "Natural language PostgreSQL query service via MCP"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14",
    "asyncpg>=0.30",
    "sqlglot>=26.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "structlog>=24.0",
]

[project.scripts]
pg-mcp = "pg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
